force-app/main/default/objects/Reference_ASO__c/Reference_ASO__c.object-meta.xml
<CustomObject>
    <label>Reference ASO</label>
    <nameField>
        <displayFormat>Reference ASO-{0000000000}</displayFormat>
        <label>Reference ASO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference ASOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>