force-app/main/default/objects/Reference_ASO__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference ASOs</relationshipLabel>
    <relationshipName>Reference_ASOs</relationshipName>
    <type>Lookup</type>
</CustomField>