force-app/main/default/objects/Reference_ASO__c/fields/Child_Client__c.field-meta.xml
<CustomField>
    <fullName>Child_Client__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Child Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>