force-app/main/default/objects/Reference_ASO__c/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_ASOs2</relationshipName>
    <type>Lookup</type>
</CustomField>