force-app/main/default/objects/Reference_ASO__c/fields/FSS__c.field-meta.xml
<CustomField>
    <fullName>FSS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_ASOs</relationshipName>
    <type>Lookup</type>
</CustomField>