force-app/main/default/objects/Reference_ASO__c/fields/POP_Plan__c.field-meta.xml
<CustomField>
    <fullName>POP_Plan__c</fullName>
    <label>POP Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>