force-app/main/default/objects/Reference_ASO__c/recordTypes/ASO_New_Business_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>ASO_New_Business_Onboarding</fullName>
    <active>true</active>
    <label>ASO New Business Onboarding</label>
</RecordType>