force-app/main/default/objects/Reference_ASO__c/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Current_Step__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>First_Check_Date__c</columns>
    <columns>First_Run_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/20/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>New Case</value>
    </filters>
    <label>New ASO Cases-Daily View</label>
</ListView>