force-app/main/default/objects/Reference_ASO__c/listViews/Chelsea_Clients_in_Discrepancy1.listView-meta.xml
<ListView>
    <fullName>Chelsea_Clients_in_Discrepancy1</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Jazzmen Harris</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/21/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Contract in Review,Client in Discrepancy</value>
    </filters>
    <label>Jazzmen- Clients in Discrepancy</label>
</ListView>