force-app/main/default/objects/Reference_ASO__c/listViews/Jaci_Clients_in_Discrepancy.listView-meta.xml
<ListView>
    <fullName>Jaci_Clients_in_Discrepancy</fullName>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name2__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Setup Complete</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/29/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Spencer Naab</value>
    </filters>
    <label>Spencer - Clients Completed</label>
</ListView>